--- a/01_dev_requirements/requirements.txt
+++ b/01_dev_requirements/requirements.txt
@@ -1,19 +1,23 @@
 # For connection to mongodb
-pymongo
+pymongo == 4.5.0
 
 # Packages for natural language processing
-nltk
+nltk == 3.8.1
 
 # packages for connection to AWS S3 bucket
-python-dotenv
-awscli
-boto3
-s3fs
+python-dotenv == 1.0.0
+awscli == 1.29.52
+boto3 == 1.28.52
+s3fs == 0.4.2
 
 # packages for interactive plotting
-plotly
-adjustText
+plotly == 5.17.0
+kaleido
+adjustText == 0.8
 
 # packages for presentation automation
-openpyxl
-python-pptx
+openpyxl == 3.1.2
+python-pptx == 0.6.22
+
+selenium
+webdriver-manager
