--- a/01_dev_requirements/Dockerfile
+++ b/01_dev_requirements/Dockerfile
@@ -9,7 +9,7 @@ COPY /. .
 RUN pip3 install -r requirements.txt
 
 ENV DEBIAN_FRONTEND noninteractive
-RUN apt-get install -y wget
+RUN sudo apt-get install -y wget
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - \ 
     && echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list
-RUN apt-get update && apt-get -y install google-chrome-stable
+RUN sudo apt-get update && sudo apt-get -y install google-chrome-stable
