--- a/dev_setup.yaml
+++ b/dev_setup.yaml
@@ -19,3 +19,13 @@ services: #Define services (docker containers) to run
       - '4040:4040'   # Port to access SparkUI (Spark Monitoring and Instrumentation UI)
     volumes:
       - ${PWD}:/home/jovyan/work
+      
+  app:
+    depends_on:
+      - dev
+    build: ./02_app_requirements
+    ports:
+      - '8502:8501' # Port to access app
+    volumes:
+      - ${PWD}:/app
+
